# lucida-downloader

./: Agents.md  Cargo.toml  README.md  package.json
scripts/: fetch-cf.js
src/: cf_fetcher.rs  config.rs  downloaders.rs  main.rs  models.rs  requests.rs  tui.rs  ui.rs
