[package]
name = "lucida-downloader"
version = "0.7.0"
edition = "2024"

[[bin]]
name = "lucida"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
json5 = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "macos-system-configuration",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["parsing", "serde"] }
tokio = { version = "1.47", features = ["macros", "rt", "signal", "time"] }
indicatif = "0.17"
colored = "2.0"
dirs = "5.0"
toml = "0.8"
dialoguer = "0.11"
headless_chrome = { version = "1.0", optional = true }
anyhow = "1.0"
humantime = "2.1"

[features]
default = []
fetch-cf = []
